# LingFlow

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .pytest.ini  2050_speech.md  AGENTS.md  API_GENERATION_REPORT.md  API_RATE_LIMITING_GUIDE.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_DESIGN_20260331.md  AUDIT_MULTI_WORKFLOW_20260331.md  AUDIT_MULTI_WORKFLOW_DESIGN.md  AUDIT_VERIFICATION_REPORT.md  CHANGELOG.md  CHANGELOG_v3.8.0.md  CHROME_DEVTOOLS_MCP_E2E_TEST_REPORT.md  CHROME_DEVTOOLS_MCP_INSTALLATION.md  CLAUDE_CODE_LEARNING_SUMMARY.md  CLAUDE_CODE_OPTIMIZATION_REPORT.md  CLAUDE_CODE_PRACTICAL_LEARNING_PLAN.md  CODE_OPTIMIZATION_RECOMMENDATIONS.md  CODE_QUALITY_REPORT.md  CODE_REVIEW_OPTIMIZATION_REPORT.md  CODE_REVIEW_REPORT_20260331.md  COMPARISON_REPORT.md  COMPLETION_SUMMARY.txt  COMPREHENSIVE_CODE_AUDIT_REPORT.md  CONTEXT_COMPARISON_REPORT.md  DEPLOYMENT_MASTER_GUIDE.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_SUMMARY.txt  DEVELOPMENT_RULES.md  DOCKER_PUSH_COMMANDS.md  DOCKER_PUSH_GUIDE.md  DUAL_REPO_PUSH_REPORT.md  DUAL_SYNC_TEST.md  E2E_TESTING_GUIDE.md  E2E_TEST_DESIGN.md  E2E_TEST_REPORT.md  (+189 more)
.gitea/: setup-gpg.sh
.githooks/: commit-msg  commit-msg-orig  config.sh  pre-commit  pre-commit-orig  pre-push  pre-push-orig
.github/: PULL_REQUEST_TEMPLATE.md  PUSH_GUIDE.md
.ling-term-mcp/: sessions.json
.lingflow/: compliance_matrix.json  prompt_router_config.json  requirements.json
.scripts/: check_complexity.py  check_docstrings.py  check_type_hints.py  ci_simulate.py  git-proxy-setup.sh  simple_complexity.py  skill_trigger.py  verify_system.py
agents/: AGENT_SKILL_REFACTOR_PLAN.md  agents.json  agents.v2.json
ai_learning_engine/: README.md  __init__.py  ab_test_framework.py  evaluation_metrics.py  feedback_interface.py  performance_benchmark.py  regression_test.py  requirements.txt  rule_application_framework.py  rule_learning_engine.py  rule_validation_system.py  safety_test_suite.py
benchmarks/: PERFORMANCE_BASELINE_REPORT.md  baseline.py
blog/: evolution-journey.md
cli/: lingflow.sh
config/: cluster.yaml
data/: LESSONS_LEARNED.md  cleaning_stats.json  config.json  opencode_session_2026-04-16.json  opencode_session_2026-04-16_research.json  pipeline_accident_features.json
discussion_hall/: proposal_index.json  proposals.json
docs/: AGENTS_ARCHIVE_20260506.md  AGENT_COORDINATION_GUIDE.md  AGENT_SILENCE_CAUSES_AND_RESPONSES.md  AGENT_SYSTEM_REFERENCE.md  ANTHROPIC_INSIGHTS.md  AUDIT_REPORT.md  AUDIT_SELF_REVIEW.md  AUTONOMY_SHADOW_PAPER.md  AUTONOMY_SHADOW_PAPER_EN.md  AUTORESEARCH_INSIGHTS.md  CHARTER.md  CLI_EXAMPLES.md  CLI_GUIDE.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_README.md  CODE_CONVENTIONS.md  CODE_OPTIMIZATION_REPORT.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_STANDARDS.md  COMMUNITY_AI_PAPER_V1.0.md  COMMUNITY_AI_PAPER_V1.1.md  COMMUNITY_AI_PAPER_V2.0.md  COMMUNITY_AI_PAPER_V2.1.md  COMPLETE_JOURNEY_AND_FUTURE.md  COMPRESSION_REFERENCE.md  CONTEXT_COMPRESSION_GUIDE.md  CORE_WORKFLOW.md  DISTRIBUTED_COMPUTE_ARCHITECTURE.md  ENCAPSULATION_AND_REPOSITORIES.md  ENGINEERING_DELIVERY_PROCESS.md  FAMILY_AUDIT_REPORT_v2.md  FEEDBACK_SYSTEM_GUIDE.md  FINAL_PAPER.md  FINAL_PAPER_V1.0.md  FINAL_PAPER_V1.0_FIXED.md  FINAL_REVIEW_REPORT.md  GITEA_PROTECTED_BRANCH_SETUP.md  GIT_PROXY_GUIDE.md  GROWTH_CHRONICLE.md  HANDOFF_SDTH_ANALYSIS_20260517.md  (+91 more)
examples/: cli_demo.sh  daily_backup.yaml  integration_example.py  knowledge_federation_example.py  multi_workflow_demo.py  prompt_router_demo.py  query_engine_demo.py  session_v2_real_world_usage.py  spec_driven_workflow_demo.py
hooks/: hooks.json  session-start
javascripts/: extra.js
lingflow/: __init__.py  ai_friendly.py  bootstrap.py  cli.py  cli.py.backup  cli_helpers.py
lingflow-api/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.simple  README.md  docker-compose.yml  install-service.sh  nixpacks.toml  pytest.ini  railway.json  requirements-docker.txt  requirements.txt  start-dev.sh  start.sh
mcp_server/: .coverage  AUDIT_REPORT_v1.3.0.md  FINAL_COMPLETION_REPORT.md  MCP_SERVER_IMPLEMENTATION_REPORT.md  NAMING_SYSTEM_UPDATE.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  README.md  TOOLS_AND_DOMAINS_GUIDE.md  TOOL_NAMES_CHINESE.md  TOOL_NAMES_MAPPING.md  WORKFLOW_AUDIT_SUMMARY.md  package.json  pyproject.toml  test_mcp_functionality.py  test_phase3.py
mcp_server/examples/: __init__.py  basic_usage.py
mcp_server/lingflow_mcp/: __init__.py  cli.py  config.py  external_router.py  monitor_tools.py  server.py  test_tools.py  tool_aliases.py  tools.py
mcp_server/tests/: __init__.py  _dummy_for_e2e.py  test_external_router.py  test_filesystem_dev_tools.py  test_mcp_e2e.py  test_mcp_server.py
scripts/: activate_self_learning.py  agent_coordinator.py  analyze_optimization_trends.py  batch_embed_chunks.py  batch_textbook_import.py  data_import_scheduler.py  docker-daemon-proxy.sh  docker-login-aliyun.sh  enable.sh  github_trend_collector.py  healthcheck_outsourced.py  ima_embedding_checkpoint.json  ima_embedding_scheduler.py  import_checkpoint.json  init.sh  install_build_tools.sh  intelligence_pipeline.py  lf.sh  lingflow_monitor.py  npm_trend_collector.py  preflight.py  preflight_check.py  publish_to_pypi.sh  push_to_github.sh  push_to_remote.sh  reply_to_hall.py  (+11 more)
(+1126 files in other folders)
