[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''(
    /(\n        \.git
        | \.venv
        | build
        | dist
    )/
)'''

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[tool.mypy]
python_version = '3.11'
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
strict_equality = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
