[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''(
    /(\n        \.git
        | \.venv
        | build
        | dist
    )/
)'''

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[tool.mypy]
python_version = '3.11'
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
strict_equality = true

[build-system]
requires = ["setuptools>=61.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingflow-core"
version = "3.7.0"
description = "AI增强的软件工程流系统 - 92% SDLC覆盖"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Guangda", email = "guangda@iepose.cn"}
]
keywords = [
    "ai", "workflow", "automation", "code-generation",
    "multi-agent", "sdlc", "testing", "code-review",
    "optimization", "intelligence", "chinese",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
]
dependencies = [
    "tiktoken>=0.5.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
intelligence = [
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
]
optimization = [
    "optuna>=3.3.0",
    "scikit-learn>=1.3.0",
]
full = [
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "optuna>=3.3.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/guangda88/LingFlow"
Documentation = "https://github.com/guangda88/LingFlow/blob/main/README.md"
Repository = "https://github.com/guangda88/LingFlow"
"Bug Tracker" = "https://github.com/guangda88/LingFlow/issues"

[project.scripts]
lingflow = "lingflow.cli.__main__:cli"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "scripts*"]
