[build-system]
requires = ["setuptools>=61.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingflow-mcp"
version = "1.3.0"
description = "LingFlow MCP Server - 将 LingFlow 工程流能力暴露为 MCP 工具（Phase 3 完成，21个工具，8个功能域）"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LingFlow Team", email = "guangda@iepose.cn"}
]
keywords = [
    "mcp", "lingflow", "ai", "workflow", "automation",
    "claude", "anthropic", "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "lingflow-core>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/guangda88/LingFlow"
Documentation = "https://github.com/guangda88/LingFlow/blob/main/mcp_server/README.md"
Repository = "https://github.com/guangda88/LingFlow"
"Bug Tracker" = "https://github.com/guangda88/LingFlow/issues"

[project.scripts]
lingflow-mcp = "lingflow_mcp.cli:main"

[tool.setuptools]
packages = ["lingflow_mcp"]

[tool.setuptools.package-data]
"lingflow_mcp" = ["*.py"]
